# perception_trainee_project_iitb_racing

./: .gitignore  readme.md
checkpoint1/: mnist_ann.ipynb  mnist_ann.py  mnist_cnn.ipynb
perception_ws/src/assignment2/: package.xml  readme.md  setup.py
perception_ws/src/assignment2/assignment2/: pointcloud_classifier.py
perception_ws/src/assignment2/launch/: launch_simulation.launch.py
