<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment2</name>
  <version>0.0.0</version>
  <description>Perception: Assignment2 - Reading and processing point cloud data</description>
  <maintainer email="siddheshsp0@gmail.com">Siddhesh</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>python3-sklearn</exec_depend>
    <exec_depend>python3-numpy</exec_depend>

  </export>
</package>
